# kuvo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/kuvo/: __init__.py  cli.py  oci.py  settings.py  venv.py
src/kuvo/oci/: __init__.py  models.py  oci.py  oci_test.py  test_index.json
